--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "An API REST using express-js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlanRoMC/express_workshop.git"
   },
   "keywords": [
     "api",
@@ -14,7 +19,12 @@
   ],
   "author": "AlanRoMC",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AlanRoMC/express_workshop/issues"
+  },
+  "homepage": "https://github.com/AlanRoMC/express_workshop#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   }
 }
